--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goopg (0.3.1-4) UNRELEASED; urgency=medium
+
+  * Add author as uploader.
+
+ -- David Steele <steele@debian.org>  Fri, 11 Nov 2016 08:57:01 -0500
+
 goopg (0.3.1-3) unstable; urgency=medium
 
   * Use triggers to install the Chromium/Chrome config file.
