--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 goopg (0.3.1-4) UNRELEASED; urgency=medium
 
   * Add author as uploader.
+  * Add Appstream data.
 
  -- David Steele <steele@debian.org>  Fri, 11 Nov 2016 08:57:01 -0500
 
