--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-goopg (0.3.1-4) UNRELEASED; urgency=medium
+goopg (0.3.1-4) unstable; urgency=medium
 
   * Add author as uploader.
   * Add Appstream data.
 
- -- David Steele <steele@debian.org>  Fri, 11 Nov 2016 08:57:01 -0500
+ -- David Steele <steele@debian.org>  Tue, 15 Nov 2016 09:03:28 -0500
 
 goopg (0.3.1-3) unstable; urgency=medium
 
