Start new version and add install shebangs

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+goopg (0.3.1-6) UNRELEASED; urgency=medium
+
+  * Add shebangs to all install scripts (Closes: 862683).
+
+ -- David Steele <steele@debian.org>  Mon, 15 May 2017 21:52:22 -0400
+
 goopg (0.3.1-5) unstable; urgency=medium
 
   * Updated appstream data.
