--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-goopg (0.3.1-6) UNRELEASED; urgency=medium
+goopg (0.3.1-6) unstable; urgency=medium
 
   * Add shebangs to all install scripts (Closes: 862683).
   * Implement debci CI test
 
- -- David Steele <steele@debian.org>  Mon, 15 May 2017 21:52:22 -0400
+ -- David Steele <steele@debian.org>  Fri, 16 Jun 2017 13:28:42 -0400
 
 goopg (0.3.1-5) unstable; urgency=medium
 
