--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+goopg (0.3.1-7) unstable; urgency=medium
+
+  * Update to python3.
+  * Lintian updates.
+
+ -- David Steele <steele@debian.org>  Sat, 16 Dec 2017 16:27:37 -0500
+
 goopg (0.3.1-6) unstable; urgency=medium
 
   * Add shebangs to all install scripts (Closes: 862683).
